--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-# Environment Variables (CRITICAL!)
+# Environment Variables
 .env
 .env.local
-.env.*.local
-
-# API Keys and Secrets
-**/config_local.py
-secrets.json
-api_keys.txt
+*.env.local
 
 # Python
 __pycache__/
@@ -17,41 +12,30 @@ __pycache__/
 venv/
 env/
 ENV/
-.venv
-
-# Jupyter Notebook
-.ipynb_checkpoints/
-*.ipynb
-
-# Data files (optional - keep if small)
-uploads/
-*.csv
-*.xlsx
-*.xls
-
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
 
 # IDE
 .vscode/
 .idea/
 *.swp
-*.swo
+
+# Data files
+uploads/*
+!uploads/.gitkeep
+outputs/*
+!outputs/.gitkeep
+data/*.csv
+data/*.xlsx
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Streamlit
 .streamlit/secrets.toml
 
-# Large files
-*.zip
-*.tar.gz
-*.rar
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
 
 # Logs
 *.log
-logs/
-
-# Output files
-outputs/
-temp/
